# agif-xcore

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  openclaw.md  openclaw_10_prompt_results.md  openclaw_mvp_smoke_results.md  openclaw_real_session_results.md  openclaw_v0_1_release_note.md  openclaw_v0_2.md  openclaw_v0_3.md  policies.md  schemas.md
src/agif_xcore/: __init__.py  __main__.py  client.py  schemas.py
src/agif_xcore/answer_mode/: __init__.py  decision_table.py  realizer_templates.py
src/agif_xcore/backends/: __init__.py  base.py  ollama.py  onnx.py  openai_api.py  openai_compat.py  registry.py
src/agif_xcore/cli/: ask.py  main.py  serve.py
src/agif_xcore/grounding/: __init__.py  base.py  bm25.py  noop.py  vector.py
src/agif_xcore/grounding/loaders/: __init__.py  docx.py  pdf.py  text.py
src/agif_xcore/memory/: __init__.py  base.py  store.py
src/agif_xcore/meta/: __init__.py  escalation.py
src/agif_xcore/pipeline/: __init__.py  intake.py  planner.py  realizer.py  runner.py  stage.py
src/agif_xcore/policies/: __init__.py  tool_policy.py
src/agif_xcore/proxy/: __init__.py  server.py
src/agif_xcore/substrate/: __init__.py  _util.py  action_gate.py  contradiction_ledger.py  memory_admission.py  policy_gate.py  provenance_graph.py  rollback_quarantine.py  support_state_engine.py
src/agif_xcore/trace/: __init__.py  envelope.py  sinks.py
tests/integration/: test_memory_cross_turn.py  test_ollama_end_to_end.py  test_replay_determinism.py
tests/unit/: test_answer_mode_decision_table.py  test_backends_onnx.py  test_backends_openai_api.py  test_backends_openai_compat.py  test_benchmark_scoring.py  test_cli_ask.py  test_client.py  test_client_memory.py  test_grounding_bm25.py  test_grounding_vector.py  test_memory_store.py  test_meta_escalation.py  test_pipeline_runner.py  test_proxy_server.py  test_rag_eval.py  test_schemas_roundtrip.py  test_substrate_orchestrator.py  test_tool_policy.py  test_trace_sinks.py
